--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "framer-motion-3d": "^10.16.15",
     "jest-environment-jsdom": "^29.7.0",
     "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-router-dom": "^6.20.1",
     "react-three-fiber": "^6.0.13",
+    "react-toastify": "^10.0.5",
     "sass": "^1.69.5",
+    "sweetalert2": "^11.11.0",
     "three": "^0.159.0"
   },
   "devDependencies": {
