--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "jest"
+    "preview": "vite previewn",
+    "test": "vitest --config=./vitest.config.js",
+    "e2e:ci": "cypress run",
+    "e2e": "cypress open"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@react-three/drei": "^9.90.1",
     "@react-three/fiber": "^8.15.12",
     "axios": "^1.6.2",
@@ -18,6 +21,7 @@
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
     "d3": "^7.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "framer-motion": "^10.16.15",
     "framer-motion-3d": "^10.16.15",
@@ -38,22 +42,24 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.6",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.10.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "jsdom": "^24.0.0",
+    "jsdom": "^24.1.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^1.6.0"
   }
 }
